# ModelOp

./: README.md  pyproject.toml
dashboards/: grafana-inference-gateway.json
scripts/: chaos_matrix.py
skills/chaos-matrix-load/: SKILL.md
skills/chaos-matrix-load/agents/: openai.yaml
skills/chaos-matrix-load/references/: postmortem-template.md  tenant-profiles.md
skills/chaos-matrix-load/scripts/: chaos_runner.py
skills/continuous-batching/: SKILL.md
skills/continuous-batching/agents/: openai.yaml
skills/continuous-batching/references/: scheduling-policies.md  state-machine.md
skills/continuous-batching/scripts/: simulate_batch.py
skills/inference-gateway/: SKILL.md
skills/inference-gateway/agents/: openai.yaml
skills/inference-gateway/references/: capacity-math.md  request-contract.md
skills/inference-gateway/scripts/: token_estimator.py
skills/telemetry-profiling/: SKILL.md
skills/telemetry-profiling/agents/: openai.yaml
skills/telemetry-profiling/references/: grafana-layout.md  metric-contract.md
src/modelop/: __init__.py  capacity.py  config.py  context_window.py  gateway.py  identity.py  main.py  rate_limit.py  scheduler.py  schemas.py  telemetry.py  tokenization.py
tests/: test_context_window.py  test_gateway.py  test_rate_limit.py  test_scheduler.py
