[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelop"
version = "0.1.0"
description = "Multi-tenant inference gateway MVP with continuous batching and token-aware shedding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "prometheus-client>=0.20.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.7,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
